--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "4.0.3",
     "react-tabs": "^3.2.1",
     "react-toastify": "^7.0.3",
+    "reactjs-popup": "^2.0.5",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
